<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Fireworks</string>
    <string name="default_string">Default</string>
    <string name="disabled">Disabled</string>
    <string name="search">Search</string>
    <string name="search_apps">Search apps</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="unit_ms">ms</string>
    <string name="statusbar_title">Status bar</string>
    <string name="quicksettings_title">Quick Settings</string>
    <string name="notifications_title">Notifications</string>
    <string name="power_title">Power</string>
    <string name="statusbar_summary">Clock style, battery style, network traffic, status bar icons...</string>
    <string name="quicksettings_summary">Brightness slider, qs battery style, tiles layout, qs style, animations...</string>
    <string name="notifications_summary">Heads up, reTicker, ambient edge light, style...</string>
    <string name="themes_summary">Monet, fonts, icons, navbar style, settings dashboard style...</string>
    <string name="gestures_summary">System gestures, power menu, button settings...</string>
    <string name="power_summary">Customize power menu</string>
    <string name="lockscreen_summary">Clock style, weather, fingerprint, secure lockscreen, animations, media art...</string>
    <string name="misc_summary"><b>Spoofing</b>, Ad-block, sensors block, smart pixels...</string>
    <string name="spark_illustration_summary">Light up the sky</string>
    <string name="statusbar_items_summary">Choose items to show on statusbar</string>
    <string name="themes_title">Themes</string>
    <string name="qs_themes">Qs Settings</string>
    <string name="spoof_title">Spoofing</string>
    <string name="gestures_title">Gestures</string>
    <string name="aosp_setting_title">System settings</string>
    <string name="lockscreen_title">Lock screen</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="powermenu_title">Power menu</string>
    <string name="buttons_title">Buttons</string>
    <string name="statusbar_items_category">Statusbar items</string>
    <string name="fingerprint_category">Fingerprint</string>
    <string name="animations_category">Animations</string>
    <string name="charging_category">Ls Charging configurations</string>
    <string name="notifications_category">Notification Settings</string>
    <string name="screenshot_category">Screenshot Settings</string>
    <string name="statusbar_clock_category_title">Statusbar clock</string>
    <string name="powermenu_items_title">Power menu items</string>
    <string name="monet_category">Monet Settings</string>
    <string name="udfps_category">UDFPS</string>
    <string name="general_category">General</string>
    <string name="flashlight_category">Flashlight</string>
    <string name="qs_category">Qs Customizations</string>
    <string name="battery_category">Energy saving Configurations</string>
    <string name="qs_animation_category">Animations</string>
    <string name="statusbar_misc_category">Statusbar tweaks.</string>
    <string name="statusbar_notifications_category">Notifications</string>
    <string name="statusbar_network_category">Network</string>
    <string name="rgb">RGB</string>
    <string name="hsl">HSL</string>
    <string name="hsv">HSV</string>
    <string name="invalid_color">Invalid color!</string>
    <string name="hosts_block_title">Ad-block</string>
    <string name="hosts_block_summary">Block ads with a modified hosts file. Turn off to use third party solutions or if apps cause issues.</string>
    <string name="light_settings_header">Light settings</string>
    <string name="battery_light_settings">Battery light</string>
    <string name="battery_light_summary">Enable or disable battery light while on DND, low battery</string>
    <string name="battery_light_enable">Battery light</string>
    <string name="battery_full_light_enabled">Battery light when fully charged</string>
    <string name="battery_light_allow_on_dnd_title">Battery light in Do Not Disturb mode</string>
    <string name="notification_light_settings">Notification light</string>
    <string name="alert_slider_notifications_title">Alert slider notifications</string>
    <string name="alert_slider_notifications_summary">Display notification when changing alert slider position</string>
    <string name="heads_up_notifications">Heads up</string>
    <string name="heads_up_notifications_summary">Pop up status bar notifications</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon when available</string>
    <string name="roaming_indicator_icon_title">Roaming indicator</string>
    <string name="roaming_indicator_icon_summary">Display roaming indicator in signal icon when in roaming mode</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="data_disabled_icon_title">Data disabled indicator</string>
    <string name="data_disabled_icon_summary">Display an indicator next to signal icon when data is disabled</string>
    <string name="vowifi_icon_title">VoWiFi icon</string>
    <string name="vowifi_icon_summary">Display VoWiFi icon when available</string>
    <string name="volte_vowifi_override_title">VoWiFi override</string>
    <string name="volte_vowifi_override_summary">Hide VoLTE when VoWiFi is available</string>
    <string name="statusbar_colored_icons_title">Colored icons</string>
    <string name="statusbar_colored_icons_summary">Use app icons for notification icons in statusbar</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="use_old_mobiletype_title">Use old style mobile data icons</string>
    <string name="use_old_mobiletype_summary">Show mobile type icon on top of the signal indicator</string>
    <string name="notification_guts_kill_app_button_title">Kill app button</string>
    <string name="notification_guts_kill_app_button_summary">Show a kill app button in the notification\'s longpress menu</string>
    <string name="status_bar_clock_title">Clock &amp; date</string>
    <string name="status_bar_clock_summary">Customize clock &amp; date</string>
    <string name="status_bar_clock_position_title">Clock style</string>
    <string name="status_bar_battery_category_title">Battery</string>
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="status_bar_battery_percent_title">Battery percent</string>
    <string name="status_bar_battery_text_charging_title">Battery percentage when charging</string>
    <string name="status_bar_battery_text_charging_summary">Always display battery percentage when charging</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar_summary">Display and customize battery bar above status bar</string>
    <string name="toast_icon_title">Toast app icon</string>
    <string name="toast_icon_summary">Display the app\'s icon corresponding with the toast</string>
    <string name="theme_customization_category">Theming</string>
    <string name="theme_customization_icon_shape_title">Icon shape</string>
    <string name="theme_customization_icon_shape_summary">Set system icon shape style</string>
    <string name="theme_customization_icon_pack_title">Icon pack</string>
    <string name="theme_customization_icon_pack_summary">Set custom icon pack style</string>
    <string name="theme_customization_signal_icon_title">Signal icon style</string>
    <string name="theme_customization_signal_icon_summary">Set custom signal icon style</string>
    <string name="theme_customization_wifi_icon_title">WiFi icon style</string>
    <string name="theme_customization_wifi_icon_summary">Set custom wifi icon style</string>
    <string name="theme_customization_navbar_title">Navbar style</string>
    <string name="theme_customization_navbar_summary">Set custom navigation bar style</string>
    <string name="flashlight_on_call_title">Blink Flashlight for incoming call</string>
    <string name="flashlight_on_call_ignore_dnd_title">Ignore DND</string>
    <string name="flashlight_on_call_ignore_dnd_summary">Whether to flash when in Do Not Disturb mode</string>
    <string name="flashlight_on_call_rate_title">Rate</string>
    <string name="flashlight_on_call_rate_summary">Flashlight on call blink rate</string>
    <string name="status_bar_logo_title">Logo</string>
    <string name="status_bar_logo_summary">Enable to display logo in the status bar</string>
    <string name="reticker_title">reTicker</string>
    <string name="reticker_summary">Replace your notifications with a redesigned version of tickers. \nSlim and less invasive than a standard notification</string>
    <string name="reticker_colored_title">Use app colored background</string>
    <string name="reticker_colored_summary">Replace reTicker background color using notification app main color</string>
    <string name="pulse_ambient_light_title">Ambient edge lighting</string>
    <string name="pulse_ambient_light_summary">Light ambient edges for pulsing notifications</string>
    <string name="notification_material_dismiss_button_title">Material dimiss button</string>
    <string name="notification_material_dismiss_button_summary">Replace clear all notification text with floating button</string>
    <string name="clearall_style_title">Material dismiss button style</string>
    <string name="clearall_bgstyle_title">Material dismiss background style</string>
    <string name="settings_dashboard_style_title">Main menu layout</string>
    <string name="settings_layout_category_title">Settings UI interface</string>
    <string name="settings_base_style_title">Sub-menus header</string>
    <string name="settings_base_style_summary">Use an alternative layout for the header in the sub-menus of Settings</string>
    <string name="settings_home_style_title">Main menu header</string>
    <string name="settings_home_style_summary">Use stock aosp layout for the header in the main menu of Settings</string>
    <string name="disable_usercard_title">UserCard</string>
    <string name="disable_usercard_summary">Toggle in order not to show the usercard on main menu of Settings</string>
    <string name="battery_level_colors_title">Toggle colorful battery icon</string>
    <string name="battery_level_colors_summary">Each battery level drop is color coded</string>
    <string name="show_wifi_standard_icon_title">Show Wi-Fi Standard icon</string>
    <string name="show_wifi_standard_icon_summary">Show Wi-Fi type in Wi-Fi signal indicator</string>
    <string name="font_settings">Font Settings</string>
    <string name="font_settings_summary">Set system font style</string>
    <string name="network_traffic_category_title">Network traffic</string>
    <string name="monet_engine_settings_title">Monet engine</string>
    <string name="monet_engine_settings_summary">Custom color, colorfulness, brightness</string>
    <string name="max_visible_notification_icons_title">Notification icons</string>
    <string name="max_visible_notification_icons_summary">Max. notification icons visible on statusbar</string>
    <string name="statusbar_padding">Status bar padding</string>
    <string name="statusbar_left_padding">Left padding</string>
    <string name="statusbar_right_padding">Right padding</string>
    <string name="media_category">Media notification</string>
    <string name="artwork_media_background_enable_blur_title">Blur media media notification artwork background</string>
    <string name="artwork_media_background_blur_radius_title">Blur amount for media notification artwork</string>
</resources>