<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2021 Project Spark
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/statusbar_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <!-- Status bar icons customizations -->
    <PreferenceCategory>

        <Preference
            android:key="systemui_tuner_statusbar"
            android:title="@string/statusbar_items_category">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
        </Preference>

    </PreferenceCategory>

    <com.spark.support.preferences.SystemSettingSeekBarPreference
        android:key="max_visible_notification_icons"
        android:title="@string/max_visible_notification_icons_title"
        android:summary="@string/max_visible_notification_icons_summary"
        android:defaultValue="5"
        settings:defaultValueText="5"
        android:max="10"
        settings:min="0"
        settings:units="" />

    <PreferenceCategory
        android:key="statusbar_padding"
        android:title="@string/statusbar_padding">

        <com.spark.support.preferences.SystemSettingSeekBarPreference
            android:key="statusbar_left_padding"
            android:title="@string/statusbar_left_padding"
            android:max="100"
            android:min="0"/>

        <com.spark.support.preferences.SystemSettingSeekBarPreference
            android:key="statusbar_right_padding"
            android:title="@string/statusbar_right_padding"
            android:max="100"
            android:min="0"/>

    </PreferenceCategory>


    <com.spark.support.preferences.SystemSettingListPreference
        android:key="status_bar_clock"
        android:title="@string/status_bar_clock_position_title"
        android:summary="%s"
        android:dialogTitle="@string/status_bar_clock_position_title"
        android:entries="@array/status_bar_clock_position_entries_notch"
        android:entryValues="@array/status_bar_clock_position_values_notch"
        android:defaultValue="2" />

    <Preference
        android:key="clock"
        android:title="@string/status_bar_clock_title"
        android:summary="@string/status_bar_clock_summary"
        android:fragment="com.spark.settings.fragments.Clock" />

    <Preference
        android:key="batterybar"
        android:title="@string/battery_bar_title"
        android:summary="@string/battery_bar_summary"
        android:fragment="com.spark.settings.fragments.BatteryBar" />

    <com.spark.support.preferences.SystemSettingMasterSwitchPreference
        android:key="network_traffic_enabled"
        android:title="@string/network_traffic_category_title"
        android:defaultValue="false"
        android:fragment="com.spark.settings.fragments.NetworkTrafficMonitorSettings" />

    <!-- Show logo on Statusbar -->
    <Preference
        android:key="status_bar_logo"
        android:title="@string/status_bar_logo_title"
        android:summary="@string/status_bar_logo_summary"
        android:fragment="com.spark.settings.fragments.StatusBarLogo" />

    <com.spark.support.preferences.SystemSettingSwitchPreference
        android:key="statusbar_colored_icons"
        android:title="@string/statusbar_colored_icons_title"
        android:summary="@string/statusbar_colored_icons_summary"
        android:defaultValue="false" />

    <com.spark.support.preferences.SystemSettingSwitchPreference
        android:key="statusbar_notif_count"
        android:title="@string/status_bar_notif_count_title"
        android:summary="@string/status_bar_notif_count_summary"
        android:defaultValue="false" />

    <com.spark.support.preferences.SystemSettingSwitchPreference
        android:key="use_old_mobiletype"
        android:title="@string/use_old_mobiletype_title"
        android:summary="@string/use_old_mobiletype_summary"
        android:defaultValue="false" />

    <com.spark.support.preferences.SecureSettingSwitchPreference
        android:key="show_wifi_standard_icon"
        android:title="@string/show_wifi_standard_icon_title"
        android:summary="@string/show_wifi_standard_icon_summary"
        android:defaultValue="false" />

    <com.spark.support.preferences.SystemSettingSwitchPreference
        android:key="data_disabled_icon"
        android:title="@string/data_disabled_icon_title"
        android:summary="@string/data_disabled_icon_summary"
        android:defaultValue="true"/>

    <com.spark.support.preferences.SystemSettingSwitchPreference
        android:key="show_fourg_icon"
        android:title="@string/show_fourg_icon_title"
        android:summary="@string/show_fourg_icon_summary"
        android:defaultValue="false"/>

    <com.spark.support.preferences.SystemSettingSwitchPreference
        android:key="roaming_indicator_icon"
        android:title="@string/roaming_indicator_icon_title"
        android:summary="@string/roaming_indicator_icon_summary"
        android:defaultValue="true"/>

    <com.spark.support.preferences.SystemSettingSeekBarPreference
        android:key="volte_icon_style"
        android:title="@string/volte_icon_title"
        android:summary="@string/volte_icon_summary"
        android:defaultValue="0"
        settings:defaultValueText="@string/disabled"
        android:max="9"
        settings:min="0"
        settings:units="" />

    <com.spark.support.preferences.SystemSettingSeekBarPreference
        android:key="vowifi_icon_style"
        android:title="@string/vowifi_icon_title"
        android:summary="@string/vowifi_icon_summary"
        android:defaultValue="0"
        settings:defaultValueText="@string/disabled"
        android:max="8"
        settings:min="0"
        settings:units="" />

    <com.spark.support.preferences.SystemSettingSwitchPreference
        android:key="volte_vowifi_override"
        android:title="@string/volte_vowifi_override_title"
        android:summary="@string/volte_vowifi_override_summary"
        android:defaultValue="true"/>

    <!-- Status bar battery customizations -->
    <PreferenceCategory
        android:title="@string/status_bar_battery_category_title" >

        <com.spark.support.preferences.SystemSettingListPreference
            android:key="status_bar_battery_style"
            android:title="@string/status_bar_battery_style_title"
            android:entries="@array/status_bar_battery_style_entries"
            android:entryValues="@array/status_bar_battery_style_values"
            android:defaultValue="0" />

        <com.spark.support.preferences.SystemSettingListPreference
            android:key="status_bar_show_battery_percent"
            android:title="@string/status_bar_battery_percent_title"
            android:entries="@array/status_bar_battery_percent_entries"
            android:entryValues="@array/status_bar_battery_percent_values"
            android:defaultValue="0" />

        <com.spark.support.preferences.SystemSettingSwitchPreference
            android:key="battery_level_colors"
            android:title="@string/battery_level_colors_title"
            android:summary="@string/battery_level_colors_summary"
            android:defaultValue="false" />

        <com.spark.support.preferences.SystemSettingSwitchPreference
            android:key="status_bar_battery_text_charging"
            android:title="@string/status_bar_battery_text_charging_title"
            android:summary="@string/status_bar_battery_text_charging_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
