<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2021 Project Spark
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/notifications_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <!-- Alert Slider Notifications -->
    <com.spark.support.preferences.SystemSettingSwitchPreference
        android:key="alert_slider_notifications"
        android:title="@string/alert_slider_notifications_title"
        android:summary="@string/alert_slider_notifications_summary"
        android:defaultValue="true" />

    <PreferenceCategory
        android:key="led"
        android:title="@string/light_settings_header">

        <Preference
            android:key="notification_light"
            android:fragment="com.android.settings.applications.manageapplications.ManageApplications"
            android:title="@string/notification_light_settings">
            <extra
                android:name="classname"
                android:value="com.android.settings.Settings$NotificationAppListActivity" />
        </Preference>

        <Preference
            android:key="charging_light"
            android:title="@string/battery_light_settings"
            android:summary="@string/battery_light_summary"
            android:fragment="com.spark.settings.fragments.BatteryLight" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="headsup_notifications_category"
        android:title="@string/notifications_category">

        <Preference
            android:key="heads_up_notifications"
            android:summary="@string/heads_up_notifications_summary"
            android:title="@string/heads_up_notifications"
            android:fragment="com.spark.settings.fragments.HeadsUpSettings" />

        <!-- Pulse notifications lighting -->
        <com.spark.support.preferences.SystemSettingMasterSwitchPreference
            android:key="pulse_ambient_light"
            android:title="@string/pulse_ambient_light_title"
            android:summary="@string/pulse_ambient_light_summary"
            android:fragment="com.spark.settings.fragments.EdgeLighting"
            android:defaultValue="false" />

        <com.spark.support.preferences.SystemSettingSwitchPreference
            android:key="reticker_status"
            android:title="@string/reticker_title"
            android:summary="@string/reticker_summary"
            android:defaultValue="false" />

        <com.spark.support.preferences.SystemSettingSwitchPreference
            android:dependency="reticker_status"
            android:key="reticker_colored"
            android:title="@string/reticker_colored_title"
            android:summary="@string/reticker_colored_summary"
            android:defaultValue="false" />

        <com.spark.support.preferences.SystemSettingSwitchPreference
            android:key="notification_guts_kill_app_button"
            android:title="@string/notification_guts_kill_app_button_title"
            android:summary="@string/notification_guts_kill_app_button_summary"
            android:defaultValue="false" />

        <com.spark.support.preferences.SystemSettingSwitchPreference
            android:key="toast_icon"
            android:title="@string/toast_icon_title"
            android:summary="@string/toast_icon_summary"
            android:defaultValue="false" />

   </PreferenceCategory>

   <PreferenceCategory
       android:title="@string/notification_material_dismiss_button_title">

       <com.spark.support.preferences.SystemSettingSwitchPreference
           android:key="notification_material_dismiss"
           android:title="@string/notification_material_dismiss_button_title"
           android:summary="@string/notification_material_dismiss_button_summary"
           android:defaultValue="false" />

       <com.spark.support.preferences.SystemSettingSeekBarPreference
           android:key="notification_material_dismiss_style"
           android:title="@string/clearall_style_title"
           android:dependency="notification_material_dismiss"
           android:defaultValue="0"
           android:max="9"
           settings:min="0" />

       <com.spark.support.preferences.SystemSettingSeekBarPreference
           android:key="notification_material_dismiss_bgstyle"
           android:title="@string/clearall_bgstyle_title"
           android:dependency="notification_material_dismiss"
           android:defaultValue="0"
           android:max="4"
           settings:min="0" />

       </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/flashlight_category">

        <com.spark.support.preferences.SystemSettingListPreference
            android:key="flashlight_on_call"
            android:title="@string/flashlight_on_call_title"
            android:entries="@array/flashlight_on_call_entries"
            android:entryValues="@array/flashlight_on_call_values"
            android:defaultValue="0" />

        <com.spark.support.preferences.SystemSettingSwitchPreference
            android:key="flashlight_on_call_ignore_dnd"
            android:title="@string/flashlight_on_call_ignore_dnd_title"
            android:summary="@string/flashlight_on_call_ignore_dnd_summary"
            android:defaultValue="false" /> 

        <com.spark.support.preferences.CustomSeekBarPreference
            android:key="flashlight_on_call_rate"
            android:title="@string/flashlight_on_call_rate_title"
            android:summary="@string/flashlight_on_call_rate_summary"
            android:max="5"
            settings:min="1"
            settings:defaultValue="1"
            settings:units="Hz" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/media_category">

        <com.spark.support.preferences.SystemSettingSwitchPreference
            android:key="media_artwork_blur_enabled"
            android:title="@string/artwork_media_background_enable_blur_title"
            android:defaultValue="false" />

        <com.spark.support.preferences.SystemSettingSeekBarPreference
            android:key="media_artwork_blur_radius"
            android:title="@string/artwork_media_background_blur_radius_title"
            android:dependency="media_artwork_blur_enabled"
            android:defaultValue="1"
            android:max="25"
            android:min="1" />

    </PreferenceCategory>

</PreferenceScreen>
