<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2022 Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/app_name" >

    <Preference
        android:key="spark_logo"
        android:selectable="false"
        android:persistent="false"
        settings:layout="@layout/spark_logo"/>

    <!-- Themes -->
    <Preference
        android:key="key_theme_settings"
        android:title="@string/themes_title"
        android:summary="@string/themes_summary"
        android:fragment="com.spark.settings.fragments.ThemeSettings" />

    <!-- Statusbar -->
    <Preference
        android:key="key_statusbar_settings"
        android:title="@string/statusbar_title"
        android:summary="@string/statusbar_summary"
        android:fragment="com.spark.settings.fragments.StatusBarSettings" />


    <!-- Quick settings -->
    <Preference
        android:key="key_quicksettings"
        android:title="@string/quicksettings_title"
        android:summary="@string/quicksettings_summary"
        android:fragment="com.spark.settings.fragments.QuickSettings" />

    <!-- Lockscreen -->
    <Preference
        android:key="key_lockscreen_settings"
        android:title="@string/lockscreen_title"
        android:summary="@string/lockscreen_summary"
        android:fragment="com.spark.settings.fragments.LockScreenSettings" />

    <!-- Notifications -->
    <Preference
        android:key="key_notifications_settings"
        android:title="@string/notifications_title"
        android:summary="@string/notifications_summary"
        android:fragment="com.spark.settings.fragments.NotificationSettings" />

    <!-- Gestures -->
    <Preference
        android:key="key_gesture_settings"
        android:title="@string/gestures_title"
        android:summary="@string/gestures_summary"
        android:fragment="com.spark.settings.fragments.GestureSettings" />

    <!-- Misc -->
    <Preference
        android:key="key_misc_settings"
        android:title="@string/misc_title"
        android:summary="@string/misc_summary"
        android:fragment="com.spark.settings.fragments.MiscSettings" />

</PreferenceScreen>
